--- a/index.html
+++ b/index.html
@@ -14,5 +14,15 @@
             <h1 class="new_year_celebration">New Year Party <br>Celebration</h1>
         </div>
     </header>
+    <main>
+        <div class="new_year_discount">
+            <h1 class="discount_offer">65% OFF</h1>
+            <div class="better_deals">
+                <p class="holiday_deals">OUR HOLIDAY DEALS ARE BETTER</p>
+                <h3 class="catagories">ALL CATEGORIES</h3>
+            </div>
+            <img class="new_year_img" src="images/New Year Photo.png" alt="New Year Photo">
+        </div>
+    </main>
 </body>
 </html>
