new_year_discount

--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
         </div>
     </header>
     <main>
-        <div class="new_year_discount">
+        <section class="new_year_discount">
             <h1 class="discount_offer">65% OFF</h1>
             <div class="better_deals">
                 <p class="holiday_deals">OUR HOLIDAY DEALS ARE BETTER</p>
                 <h3 class="catagories">ALL CATEGORIES</h3>
             </div>
             <img class="new_year_img" src="images/New Year Photo.png" alt="New Year Photo">
-        </div>
+        </section>
     </main>
 </body>
 </html>
