new_year_midnight_party

--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New Year 2024</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="images/Group 70.png" type="image/x-icon">
 
 </head>
+
 <body>
     <header class="new_year_banner">
         <div class="new_year_banner_contents">
@@ -23,6 +26,16 @@
             </div>
             <img class="new_year_img" src="images/New Year Photo.png" alt="New Year Photo">
         </section>
+        <section class="midnight_party">
+            <div class="party_banner">
+                <div class="party_content">
+                    <h1 class="party_banner_headline">Welcome to <br>midnight party</h1>
+                    <p class="party_description">New Year is one of the best and most exciting time of the year. Thanks to the ringing of bells, honking of horns, buzzing cheer of people, echoing music from houses and restaurants. Everything just comes alive in New Year.</p>
+                </div>
+                <div class="new_year_2024"><img src="images/Group 70.png" alt="2024"></div>
+            </div>
+        </section>
     </main>
 </body>
+
 </html>
