--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
             <div class="party_banner">
                 <div class="party_content">
                     <h1 class="party_banner_headline">Welcome to <br>midnight party</h1>
-                    <p class="party_description">New Year is one of the best and most exciting time of the year. Thanks to the ringing of bells, honking of horns, buzzing cheer of people, echoing music from houses and restaurants. Everything just comes alive in New Year.</p>
+                    <p class="party_description">New Year is one of the best and most exciting time of the year. Thanks to the ringing of bells,<br> honking of horns, buzzing cheer of people, echoing music from houses and restaurants. <br>Everything just comes alive in New Year.</p>
+                    <button class="join_btn">Join Now</button>
                 </div>
                 <div class="new_year_2024"><img src="images/Group 70.png" alt="2024"></div>
             </div>
