--- a/index.html
+++ b/index.html
@@ -30,10 +30,33 @@
             <div class="party_banner">
                 <div class="party_content">
                     <h1 class="party_banner_headline">Welcome to <br>midnight party</h1>
-                    <p class="party_description">New Year is one of the best and most exciting time of the year. Thanks to the ringing of bells,<br> honking of horns, buzzing cheer of people, echoing music from houses and restaurants. <br>Everything just comes alive in New Year.</p>
+                    <p class="party_description">New Year is one of the best and most exciting time of the year. Thanks
+                        to the ringing of bells, honking of horns, buzzing cheer of people, echoing music from houses
+                        and restaurants. Everything just comes alive in New Year.</p>
                     <button class="join_btn">Join Now</button>
                 </div>
                 <div class="new_year_2024"><img src="images/Group 70.png" alt="2024"></div>
+            </div>
+        </section>
+        <section class="party_products">
+            <div>
+                <h6 class="best_gifts">THE BEST GIFTS</h6>
+                <h1 class="products_title">Our Awesome Portfolio</h1>
+                <p class="products_description">Black, navy and white are classic hues, complement all skin tones and
+                    naturally feel polished. Deep reds, emeralds and purples are more festive but just as sophisticated.
+                    Gold, bronze and silver are for the bold hearted (and those looking to shine).</p>
+                <div class="products">
+                    <div class="first_row_products">
+                        <img src="images/Rectangle 3.png" alt="bag">
+                        <img src="images/Rectangle 4.png" alt="bag">
+                        <img src="images/Rectangle 5.png" alt="shoe">
+                    </div>
+                    <div class="second_row_products">
+                        <img src="images/Rectangle 6.png" alt="bag">
+                        <img src="images/Rectangle 7.png" alt="bag">
+                        <img src="images/Rectangle 8.png" alt="shoe">
+                    </div>
+                </div>
             </div>
         </section>
     </main>
