--- a/index.html
+++ b/index.html
@@ -52,13 +52,43 @@
                         <img src="images/Rectangle 5.png" alt="shoe">
                     </div>
                     <div class="second_row_products">
-                        <img src="images/Rectangle 6.png" alt="bag">
-                        <img src="images/Rectangle 7.png" alt="bag">
-                        <img src="images/Rectangle 8.png" alt="shoe">
+                        <img src="images/Rectangle 6.png" alt="shoe">
+                        <img src="images/Rectangle 7.png" alt="sunglass">
+                        <img src="images/Rectangle 8.png" alt="bangles">
                     </div>
                 </div>
             </div>
         </section>
+        <section class="subcribe">
+            <div>
+                <img class="email" src="images/Group 61.png" alt="email">
+                <h1 class="subcribe_title">Subscribe Newsletter</h1>
+                <p class="subcribe_description">The New Year is the time or day at which a new calendar year begins and
+                    the calendar's year count increments by one. <br>Many cultures celebrate the event in some manner.
+                </p>
+                <div>
+                    <input type="text" id="username" name="username" placeholder="user@gmail.com">
+                    <button class="subscribe_btn">Subscribe</button>
+                </div>
+            </div>
+        </section>
+        <footer>
+            <div class="footer_header">
+                <p class="address">44, Big Building Roosevelt Street <br>Beach Gardens Florida 33410</p>
+                <div>
+                    <div class="party_number">
+                        <img src="images/Call.png" alt="Call">
+                        <p class="number">+00 123 584 124</p>
+                    </div>
+                    <div class="party_website">
+                        <img src="images/Website.png" alt="Website">
+                        <p class="website">www.website.com</p>
+                    </div>
+                </div>
+
+            </div>
+            <hr>
+        </footer>
     </main>
 </body>
 
