--- a/index.html
+++ b/index.html
@@ -38,6 +38,47 @@
                 <div class="new_year_2024"><img src="images/Group 70.png" alt="2024"></div>
             </div>
         </section>
+        <section class="party_date_time">
+            <div>
+                <p class="place"><span>Place:</span> New Park Hotel</p>
+                <p class="date"><span>Date:</span> 31 December Night 2023</p>
+                <p class="time"><span>Time:</span> Evening 7.30 pm to 12.30 am</p>
+            </div>
+            <div class="party_place_time_btn">
+                <button class="date_time_btn">Join Now</button>
+            </div>
+        </section> 
+        <section>
+            <div class="new_best_offer">
+                <div class="new_offer_coming_soon">
+                    <h6 class="new_offer">NEW BEST OFFER</h6>
+                    <h3 class="coming_soon">Coming Soon</h3>
+                    <p class="new_offer_description">New Year festival, any of the social, <br>cultural, and religious observances worldwide that <br>celebrate the beginning of the new year.</p>
+                </div>
+                <div class="new_year_celebrate">
+                    <img src="images/Ellipse 1.png" alt="new year celebration">
+                </div>
+                <div class="celebrate_year">
+                    <h3 class="year">2024</h3>
+                    <p class="year_description">On January 1, the world says goodbye to 2023 and welcomes the New Year 2024 with the commitment of abundant prosperity and a more promising time to come.</p>
+                    <img src="images/Group 96.png" alt="new year">
+                </div>
+            </div>
+
+        </section>
+        <section>
+            <div class="holiday_sale">
+                <h6 class="functional">WHAT IS FUNCTIONAL</h6>
+                <h1 class="fifty_percent_sale"><span>Holidays</span> Sale 50%</h1>
+                <p class="sale-description">The first, and most obvious, reason customers make purchases on the New Year's holiday is to take advantage of stupendous sales. Liquidated inventory, revolutionary promotions and after-Christmas steals dominate the market.</p>
+                <div class="sale_images">
+                    <img src="images/Group 75.png" alt="box" class="box">
+                    <img src="images/Rectangle 1.png" alt="girl" class="girl">
+                    <img src="images/Group 44.png" alt="50% discount" class="fifty_percent_discount">
+                </div>
+            </div>
+        </section>
+
         <section class="party_products">
             <div>
                 <h6 class="best_gifts">THE BEST GIFTS</h6>
@@ -88,8 +129,18 @@
 
             </div>
             <hr>
+            <div class="footer_items">
+                <li><img src="images/Facebook.png" alt=""></li>
+                <li><img src="images/Instagram.png" alt=""></li>
+                <li><img src="images/Twitter.png" alt=""></li>
+                <li><img src="images/Linkedin.png" alt=""></li>
+            </div>
+            <hr>
+            <div class="footer_unsubscribe">
+                <p>2024, All Rights Reserved.</p>
+                <p>Unsubscribe</p>
+            </div>
         </footer>
     </main>
 </body>
-
 </html>
